--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<li><a href="about.html">About</a></li>
 					<li><a href="#">Store</a></li>
 					<li><a href="#">Gallery</a></li>
+					<li><a href="#">Videos</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</div>
@@ -56,7 +57,7 @@
 
 		<img src="img/jumbotron.png" class="img-responsive img-rounded pull-right jborder" />
 
-		<h1>Buy any product get 1 free pair of earbuds!</h1>
+		<h1>Buy any product, get 1 free pair of earbuds!</h1>
 
 		<p class="wordsJumbo">We are giving away one free pair of black earbuds to anyone who buys our products today. The deal ends tommorrow night at 12pm ET.</p>
 
